Add stay updated form

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,25 @@
 <div class="headline">
-	<p class="headline">Coming soon...keep checking back</p>
+	<h1>Coming soon...</h1>
+	<h4>Keep Updated</h4>
+	<p>Enter your email address and we'll let you know as soon as it's ready.</p>
+	<div class="inquiry-form">
+		<%= form_for @inquiry do |f| %>
+			<%= f.text_field :email %>
+			<%= f.submit 'Subscribe' %>
+		<% end %>
+		
+			<% if @inquiry.errors.any? %>  
+				<div class="alert alert-error">
+					<ul>  
+				    <% for message in @inquiry.errors.full_messages %>  
+				    	<li><%= message %></li>  
+				    <% end %>  
+				  </ul>  
+				</div>  
+			<% end %>
+		</div>
+		</div>
+	</div>
+	
 </div>
+
