--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+	
 <%= yield %>
-
+<% flash.each do |name, msg| %>
+	<%= content_tag :div, :class => "alert alert-#{name}" do %>
+		<h4><%= name.capitalize %>!</h4>
+		<ul>
+			<li><%= msg %></li>
+		</ul>
+	<% end %>
+<% end %>
 </body>
 </html>
