--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -1,8 +1,12 @@
 body {
-	color: white;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	font-weight: 300;
-	background-color: black;
+	color: #fff;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: normal;
+	/* font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; */
+	font-family: georgia, serif;
+	/* font-weight: 300; */
+	background-color: #222;
 
 }
 
